--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,19 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Holistica;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.;Database=Holistica;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+
+    "AllowedHosts": "*",
+
+    "Stripe": {
+        "SecretKey": "your_secret_key_here",
+        "PublishableKey": "your_publishable_key_here"
     }
-  },
-  "AllowedHosts": "*"
+
 }
