Added Service and beginnings of Stripe.

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,11 +9,6 @@
         }
     },
 
-    "AllowedHosts": "*",
-
-    "Stripe": {
-        "SecretKey": "your_secret_key_here",
-        "PublishableKey": "your_publishable_key_here"
-    }
+    "AllowedHosts": "*"
 
 }
